Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-114122

tst_itemmodel: selection from table does not work

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • 6.7.0 FF
    • 6.6, 6.7.0
    • Graphs: 3D
    • None
    • 9f31daae4 (dev)

    Description

      When selecting a cell in the table, only the selection label changed, not the selected item itself.

      Something is probably missing from Bars3D / QuickGraphsItem.

      Note: Axis label selection for row / column does not work either, probably for the same reason.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            dilek Dilek Akcay
            tokorpip Tomi Korpipää
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes