Enable selecting bars from the table view

Fixes: QTBUG-114122
Fixes: QTBUG-117842
Change-Id: I6c329dd26e1342dc2a5b7e7ac1da3a3ac2275077
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
Reviewed-by: Sakaria Pouke <sakaria.pouke@qt.io>